--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
     <h1>Hello World!</h1>
-    <img src="grumpy.jpg" alt="Grumpy Cat">
+    <img src="dog.jpg" alt="Bond dog">
 	</body>
 </html>
